# airdrome

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: api.yml  hud.yml
aerodome_api/: Cargo.toml
aerodrome_api/: Cargo.toml
airdrome_api/: Cargo.toml  Dockerfile  README.md  documentation.md  sqlx-data.json
airdrome_api/migrations/: 20201031100000_initial_schema.sql  20201124061710_add_object_application_versions_table.sql
airdrome_api/src/: main.rs
airdrome_api/src/applications/: mod.rs
airdrome_api/src/applications/event_application/: mod.rs
airdrome_api/src/applications/obex_application/: mod.rs
airdrome_api/src/applications/object_application/: description_model.rs  filename_factory.rs  filename_model.rs  hash_factory.rs  hash_model.rs  id_model.rs  mod.rs  name_factory.rs  object_factory.rs  object_model.rs  object_repository.rs  targets_model.rs  timestamp_factory.rs  timestamp_model.rs  version_number_factory.rs  version_number_model.rs  versions_factory.rs  versions_model.rs  versions_repository.rs
airdrome_api/src/applications/repository_application/: id_factory.rs  lib.rs  path_factory.rs  path_model.rs
airdrome_api/src/controllers/: mod.rs  objects_controller.rs
airdrome_api/src/services/: mod.rs
airdrome_api/src/services/database/: connection.rs  query.rs
airdrome_api/src/services/events_service/: mod.rs
airdrome_api/src/services/files_service/: mod.rs
airdrome_api/src/services/storage_service/: mod.rs
airdrome_hud/: .eslintrc.json  Dockerfile  README.md  package-lock.json  package.json
airdrome_hud/src/: client.js  server.js  service-worker.js
airdrome_hud/src/components/: Menu.svelte  Nav.svelte  NewObjects.svelte  ObjectCard.svelte  Search.svelte  Stats.svelte  UpdatedObjects.svelte
airdrome_hud/src/routes/: _layout.svelte  index.svelte  search.svelte  setup.svelte
applications/event_application/: Cargo.toml
applications/event_application/src/: lib.rs
applications/obex_application/: Cargo.toml
applications/obex_application/src/: lib.rs
applications/object_application/: .env  Cargo.toml  sqlx-data.json
applications/object_application/src/: description_factory.rs  id_factory.rs  (+11 more)
applications/repository_application/: Cargo.toml
infrastructure/: README  README.md  app.yaml  docker-compose.yml  docker_db.yml  nginx.conf  schema_db.sql  site.yml
infrastructure/proxy/: Dockerfile  dev_proxy.conf  proxy.conf
jobs/migrations_job/: Dockerfile  run.sh
services/events_service/: Cargo.toml
services/files_service/: Cargo.toml
(+11 files in other folders)
