[package]
name = "airdrome_api"
version = "0.1.0"
authors = ["Joshua Terrasas <joshua.terrasas@studentbody.byu.edu>"]
edition = "2018"

[dependencies]
actix-cors = "0.6.1"
actix-files = "0.6.0"
actix-rt = "2.7.0"
actix-web = { version = "4.3.0", features = ["rustls"] }
awc = { version = "3.0.0", features = ["rustls"] }
base64 = "~0.13"
chrono = "0.4.19"
env_logger = "~0.8"
log = "~0.4"
obex = "*"
regex = "1"
rustls = "0.20.8"
serde = "1.0.136"
serde_json = "1.0.79"
sha-1 = "~0.9"
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-actix-rustls", "sqlite", "macros", "offline"] }
uuid = { version = "0.8.2", features = ["v4"] }
zip = "~0.5"
