[package]
name = "obex_application"
version = "0.1.0"
authors = ["Joshua Terrasas <joshua.terrasas@studentbody.byu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obex = { path = "../../../obex_rs" }
events_service = { path = "../../services/events_service" }
object_application = { path = "../object_application" }
sqlx = { default-features = false, features = ["runtime-tokio", "macros", "mysql"] }
